--- a/decidim-core-extended/config/locales/pl.yml
+++ b/decidim-core-extended/config/locales/pl.yml
@@ -122,8 +122,7 @@ pl:
         change_password: Zmień hasło
         delete_group: Usuń grupę
         inhabitant_card_authorization_info: |-
-          Masz możliwość potwierdzenia swojego konta Kartą Mieszkańca. Jest to dobrowolne, opcjonalne potwierdzenie, że jesteś mieszkańcem Gdyni.<br>
-          Dzięki temu na Twoim profilu i przy Twojej nazwie użytkownika będzie widniał specjalny status – %{img} Użytkownik potwierdzony.<br>
+          Masz możliwość potwierdzenia swojego konta Kartą Mieszkańca. Dzięki temu na Twoim profilu i przy Twojej nazwie użytkownika będzie widniał specjalny status – %{img} Użytkownik potwierdzony.<br>
           Docelowo Platforma będzie również zintegrowana z Kartą Mieszkańca funkcjonalnie, co ułatwi Ci korzystanie z Platformy i ułatwi uczestniczenie w ważnych procesach.
         inhabitant_card_authorization: Potwierdzenie Kartą Mieszkańca
         inhabitant_card_authorization_text: Twoje konto zostało zautoryzowane przy pomocy Karty Mieszkańca
