trello card: 202 - agenda fix

--- a/decidim-module-meetings_extended/config/locales/pl.yml
+++ b/decidim-module-meetings_extended/config/locales/pl.yml
@@ -6,6 +6,10 @@ pl:
         name: Spotkania
     meetings:
       admin:
+        agenda:
+          form:
+            title: Tytuł
+            visible: Widoczny
         agenda_item:
           title: Nazwa
           duration: Czas trwania
