audit: 1.3.5 - autocomplete off + 3.3.1 & 3.3.3 - error messages

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -385,6 +385,9 @@ pl:
             Administrator usunął %{resource_type}, ponieważ treść została zgłoszona jako %{report_reasons}.</br>
             <i>%{resource_content}</i>
     forms:
+      errors:
+        error: Nie moze byc puste
+        email: Nie moze być puste i musi być emailem
       file_help:
         image:
           message_1: Preferowany obraz lub zdjęcie, które nie zawiera żadnego tekstu.
