change host name in translations

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -529,7 +529,7 @@ pl:
           take_part: Dowiedz się więcej
       cookie_warning:
         description_html: Uprzejmie informujemy, że od 25 maja 2018 r. obowiązuje tzw. RODO, czyli Rozporządzenie Parlamentu Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 r. w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i w sprawie swobodnego przepływu takich danych oraz uchylenia dyrektywy 95/46/WE. Nowe prawo wprowadza zmiany w zasadach regulujących przetwarzanie danych osobowych. <br>Nasza strona internetowa używa plików cookies (tzw. ciasteczka) w celach statystycznych, reklamowych oraz funkcjonalnych. Dzięki nim możemy indywidualnie dostosować stronę do twoich potrzeb. Każdy może zaakceptować pliki cookies albo ma możliwość wyłączenia ich w przeglądarce, dzięki czemu nie będą zbierane żadne informacje. <br>Szczegółowe zapisy znajdziesz w %{link}. Jednocześnie informujemy, że Państwa dane są przetwarzane w sposób bezpieczny, z należytą starannością i zgodnie z obowiązującymi przepisami.
-        link_label: nowej polityce prywatności portalu internetowego www.dialog.gdynia.pl
+        link_label: nowej polityce prywatności portalu internetowego konsultujemy.gdynia.pl
       participatory_processes:
         participatory_process:
           take_part_in: Weź udział w procesie %{resource_name}
