trello card: 206 - hiding sortitions

--- a/decidim-proposals_extended/config/locales/pl.yml
+++ b/decidim-proposals_extended/config/locales/pl.yml
@@ -11,4 +11,4 @@ pl:
         not_allowed: Nie możesz zobaczyć tej strony
       proposals:
         vote_button:
-          private_component: Głosowanie ograniczone do użytkowników prywatnych
+          private_component: Poparcia ograniczone do użytkowników prywatnych
