fix missing translations
add missing social_handlers_help translation

add missing translations

--- a/decidim-processes-extended/config/locales/pl.yml
+++ b/decidim-processes-extended/config/locales/pl.yml
@@ -38,6 +38,12 @@ pl:
         facebook_handler: Facebook
         facebook_title: Odwiedź proces na Facebook
         social_networks: Portale społecznościowe
+    participatory_processes:
+      admin:
+        participatory_processes:
+          form:
+            hashtag_help: Hashtag
+            social_handlers_help: Link do portalu
     shared:
       participatory_space_filters:
         filters:
