trello card: 226 - assembly cell - creation date header

--- a/decidim-assemblies-extended/config/locales/pl.yml
+++ b/decidim-assemblies-extended/config/locales/pl.yml
@@ -94,3 +94,4 @@ pl:
         # internal_organisation: Organizacja prac
         next_meeting_date: Najbliższe posiedzenie
         team_service: Obsługa zespołu
+        cadency_start_date: Rozpoczęcie kadencji
