--- a/config/locales/pl-z_custom.yml
+++ b/config/locales/pl-z_custom.yml
@@ -143,7 +143,29 @@ pl:
       decidim/user:
         nickname: Nazwa konta
 
-  hello: "Witaj"
+  date:
+    formats:
+      decidim_short: "%d.%m.%Y"
+      decidim_short_with_month_name_short: "%d %b %Y"
+      decidim_with_day_and_month_name: "%A %d %b %Y"
+      decidim_with_month_name: "%d %B %Y"
+      decidim_with_month_name_short: "%d %b"
+  formats:
+    day_of_month: "%b %d"
+    day_of_week: "%a"
+    day_of_week_long: "%a %e"
+    day_of_year: "%d.%m.%y"
+    decidim_day_of_year: "%d %B %Y"
+    decidim_short: "%d.%m.%Y %H:%M"
+    default: "%a, %d %b %Y %H:%M:%S %z"
+    devise:
+      mailer:
+        invitation_instructions:
+          accept_until_format: "%B %d, %Y %I:%M %p"
+    long: "%B %d, %Y %H:%M"
+    long_dashed: "%Y.%m.%d %H:%M:%S"
+    short: "%d.%m.%Y %H:%M"
+    time_of_day: "%H:%M"
 
   decidim:
     space_type_to_polish:
