trello card: 220 - back link on collaborative drafts index page

--- a/decidim-proposals_extended/config/locales/pl.yml
+++ b/decidim-proposals_extended/config/locales/pl.yml
@@ -7,6 +7,9 @@ pl:
             private_proposal: Propozycje prywatne
             transparent: Transparenta
     proposals:
+      collaborative_drafts:
+        index:
+          back_to_list: Powrót do listy propozycji
       proposal:
         not_allowed: Nie możesz zobaczyć tej strony
       proposals:
