update .gitignore, extended modules, package.json, sentry
fix sentry for develpo

update package.json

Update .gitignore

--- a/config/locales/pl-PL-core.yml
+++ b/config/locales/pl-PL-core.yml
@@ -1553,6 +1553,7 @@ pl:
         profile: Moje konto
         public_profile: Mój profil publiczny
         sign_out: Wyloguj się
+        title: Profile links
       user_profile:
         account: Moje konto
         authorizations: Autoryzacje
