--- a/config/locales/pl-PL-proposals.yml
+++ b/config/locales/pl-PL-proposals.yml
@@ -929,3 +929,7 @@ pl:
       included_proposals:
         proposal_project: 'Propozycja występująca w tych projektach:'
         proposal_result: 'Propozycja pojawiająca się w tych wynikach:'
+    statistics:
+      proposals_accepted: Zaakceptowane propozycje
+      proposals_count: Propozycje
+      supports_count: Wsparcie
