--- a/todo.txt
+++ b/todo.txt
@@ -4,5 +4,5 @@ Rzeczy do zrobienia:
 . decidim-assemblies-extended/app/views/layouts/decidim/_assembly_header.html.erb - TODO: zaktualizowac po update banner_image
 - decidim-assemblies-extended/app/views/decidim/assemblies/assemblies/show.html.erb - # TODO: zaktualizowac po update
 - decidim-assemblies-extended/app/views/decidim/assemblies/admin/assemblies/_form.html.erb - poprawc assety javascript_include_tag
-
+- decidim-processes-extended/app/views/decidim/participatory_processes/participatory_processes/show.html.erb - brakujacy hero_img
 - decidim-surveys_extended/app/decorators/models/question_decorator.rb - uploader - Decidim::Forms::Question.class_eval
