--- a/todo.txt
+++ b/todo.txt
@@ -6,3 +6,7 @@ Rzeczy do zrobienia:
 - decidim-assemblies-extended/app/views/decidim/assemblies/admin/assemblies/_form.html.erb - poprawc assety javascript_include_tag
 - decidim-processes-extended/app/views/decidim/participatory_processes/participatory_processes/show.html.erb - brakujacy hero_img
 - decidim-surveys_extended/app/decorators/models/question_decorator.rb - uploader - Decidim::Forms::Question.class_eval
+
+obrazki current_participatory_space.banner_image.url:
+- decidim-processes-extended/app/views/layouts/decidim/_process_header.html.erb
+- decidim-assemblies-extended/app/views/layouts/decidim/_assembly_header.html.erb
