--- a/decidim-module-meetings_extended/config/locales/pl.yml
+++ b/decidim-module-meetings_extended/config/locales/pl.yml
@@ -14,3 +14,6 @@ pl:
           title: Nazwa
           duration: Czas trwania
           description: Opis
+      meetings:
+        show:
+          visit_finished: Zakończone spotkania
