--- a/decidim-module-meetings_extended/config/locales/pl.yml
+++ b/decidim-module-meetings_extended/config/locales/pl.yml
@@ -1,11 +1,30 @@
 ---
 pl:
   decidim:
+    admin:
+      filters:
+        meetings:
+          origin_eq:
+            label: Origin
+            values:
+              citizen: Citizen
+              official: Official
+              user_group: User Groups
+          scope_id_eq:
+            label: Scope
+          type_eq:
+            label: Rodzaj sptkania
+          values:
+            hybrid: Wszystkie
+            in_person: Osobiście
+            online: Online
     components:
       meetings_extended:
         name: Spotkania
     meetings:
       admin:
+        exports:
+          answers: Odpowiedzi
         agenda:
           form:
             title: Tytuł
@@ -14,6 +33,11 @@ pl:
           title: Nazwa
           duration: Czas trwania
           description: Opis
+
       meetings:
         show:
           visit_finished: Zakończone spotkania
+      models:
+        meeting:
+          fields:
+            id: ID
