add missing admin translation

--- a/decidim-admin_extended/config/locales/pl.yml
+++ b/decidim-admin_extended/config/locales/pl.yml
@@ -12,6 +12,12 @@ pl:
       block_user:
         new:
           new_name: Zablokowany użytkownik
+      filters:
+        last_sign_in_at_present:
+          label: Czy ostatnio logował się
+          values:
+            'false': 'Nie'
+            'true': 'Tak'
       models:
         information:
           fields:
