add missing select local for account (0.25.2)

--- a/decidim-core-extended/config/locales/pl.yml
+++ b/decidim-core-extended/config/locales/pl.yml
@@ -8,6 +8,7 @@ pl:
       static_page_topic:
         cover: Obraz główny
       user:
+        locale: Język
         gender: Płeć
         birth_year: Rok urodzenia
         district: Dzielnica
