--- a/todo.txt
+++ b/todo.txt
@@ -4,16 +4,14 @@ Rzeczy do zrobienia:
 . decidim-assemblies-extended/app/views/layouts/decidim/_assembly_header.html.erb - TODO: zaktualizowac po update banner_image
 - decidim-assemblies-extended/app/views/decidim/assemblies/assemblies/show.html.erb - # TODO: zaktualizowac po update
 - decidim-assemblies-extended/app/views/decidim/assemblies/admin/assemblies/_form.html.erb - poprawc assety javascript_include_tag
-- decidim-processes-extended/app/views/decidim/participatory_processes/participatory_processes/show.html.erb - brakujacy hero_img
-- decidim-surveys_extended/app/decorators/models/question_decorator.rb - uploader - Decidim::Forms::Question.class_eval
-
-obrazki current_participatory_space.banner_image.url:
-- decidim-processes-extended/app/views/layouts/decidim/_process_header.html.erb
-- decidim-assemblies-extended/app/views/layouts/decidim/_assembly_header.html.erb
 
 
-# TODO: dodac uploader w nowej wersji:
+# TODO: zaktualizować uploader w nowej wersji:
 - Decidim::Cw::ImageUploader
 - decidim-core-extended/app/decorators/decidim/core/models/area_decorator.rb
 - decidim-core-extended/app/decorators/decidim/core/uploaders/image_uploader_decorator.rb
 - decidim-core-extended/app/views/decidim/admin/areas/index.html.erb
+
+- decidim-assemblies-extended/app/decorators/models/assembly_member_decorator.rb
+- decidim-surveys_extended/app/decorators/models/question_decorator.rb
+- decidim-core-extended/app/decorators/decidim/core/models/static_page_topic_decorator.rb
