--- a/decidim-admin_extended/config/locales/pl.yml
+++ b/decidim-admin_extended/config/locales/pl.yml
@@ -7,6 +7,8 @@ pl:
         link_url: Link
         lead: Komunikat
         published: Widoczna
+      organization:
+        enable_participatory_space_filters: Włącz filtry dla przestrzeni partycypacyjnych
   decidim:
     admin:
       conflicts:
