add missing translations

--- a/decidim-core-extended/config/locales/pl.yml
+++ b/decidim-core-extended/config/locales/pl.yml
@@ -139,3 +139,6 @@ pl:
         inhabitant_card_authorization_success: Autoryzowano
       footer:
         ue_logotypes: Logotypy UE
+  time:
+    formats:
+      ddmmyyyy: "%d.%m.%Y"
